# Knowledge-Dojo

./: .env.example  .gitignore  Home.md  README.md  SECURITY.md  config.yaml  diagnose_env.py  dojo.bat  inspect_api.py  mcp.md  pyproject.toml  requirements.txt  start_dojo.bat
00_Inbox/: SOURCE__.md  SOURCE__10-things-i-learned-after-112-days-of-vibe-coding-an-app-until-i-make-1000000.md  SOURCE__i-spent-546m-tokens-vibe-coding-with-gemini-3-pro-my-thoughts-on-its-vibe-coding-capabilities.md  SOURCE__mcp-test.md
00_Inbox/_attachments/: 01KDXGXK66WHXJ4SY2WRMJV8BW.txt  01KDZ07C06BTJW76ZF43GRYENP.txt  01KDZ42YNX8AZZ7RT2RC6ZEV43.txt
01_Drills/: DRILL__ai-driven-content-metadata-generation-api.md  DRILL__ai-powered-responsive-navigation-bar-content-section.md  DRILL__mcp-server-integration.md  DRILL__strategic-ai-model-selection-for-development-tasks.md  DRILL__test-mcp-server-setup.md
02_Practice_Logs/: 2026-01-01__mcp-server-integration.md
10_Mastery/: MASTERY__mcp-server-integration.md
11_Topics/: AI_Code_Generation.md  AI_Content_Generation.md  AI_Workflow.md  API_Integration.md  Backend_Development.md  Cost_Optimization.md  Model_Selection.md  Performance_Tuning.md  Responsive_Design.md  UI_Development.md
20_Quick_Reference/: Cursor.md  MCP.md
90_Archive/old_learning_dojo/: _Dashboard.md  config.yaml
_agent_rules/: agent_master.md  cheatsheet_rules.md  prompt_library.md
_templates/: cheatsheet_template.md
fabsvault/: _Dashboard.md
productionvault/: Home.md  config.yaml
tests/: __init__.py  test_ingest.py  test_init.py  test_semantic.py  test_stats.py  test_trainer.py
vibe_dojo/: __init__.py  cli.py  config.py  distiller.py  global_config.py  ingestor.py  interactive.py  semantic.py  trainer.py  writer.py
(+85 files in other folders)
