[project]
name = "vibe-dojo"
version = "0.1.0"
description = "Trainer-first learning system: URLs → Drills → Mastery"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "python-ulid>=2.2.0",
    "google-generativeai>=0.3.0",
    "youtube-transcript-api>=0.6.0",
    "trafilatura>=1.6.0",
    "praw>=7.7.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[project.scripts]
dojo = "vibe_dojo.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
